<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google_maps" />

    <Button
        android:id="@+id/btnGoogleMaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="8dp"
        android:text="@string/open_google_maps" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnGoogleMaps"
        android:layout_marginTop="8dp"
        android:text="@string/get_gps_cordinates" />

    <Button
        android:id="@+id/btnGpsNetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnGps"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/btnGps"
        android:text="@string/network" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnGps"
        android:layout_marginTop="8dp"
        android:text="@string/result"
        android:textColor="#111"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnGps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:elevation="1dp"
        android:text="@string/gps" />
</RelativeLayout>
